--- a/pages/theatre2.html
+++ b/pages/theatre2.html
@@ -7,11 +7,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">
-    <link href="styles.css" rel="stylesheet" type="text/css">
+    <link href="../styles/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <header>
-        <img src="New-Logo-with-Programs_black.jpg" width="100px" height="auto"/>
+        <img src="../images/New-Logo-with-Programs_black.jpg" width="100px" height="auto"/>
         <nav>
              <p>Home</p>  
              <p>Shows</p>  
