--- a/pages/history.html
+++ b/pages/history.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A Brief History of the Internet</title>
-    <link href="../styles/History.css" type="text/css" rel="stylesheet">
+    <link href="../styles/historyold.css" type="text/css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -16,8 +16,8 @@
     <header>
         <a href="../index.html">Home</a>
         <a href="theatre2.html">Theater Bill</a>
-        <a href="stewrecipe.html">Stew Recipe</a>
-        <a href="cascade.html">Cascades</a>
+        <a href="stew-recipe.html">Stew Recipe</a>
+        <a href="cascademountain.html">Cascades</a>
         <a href="#lily">Jump to Bottom</a>
 
     </header>
