--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>Graph 130 - Eve</title>
 	</head>
 	<body>
-<h1>Eve Williams.</h1>
+<h1>Eve Williams</h1>
 <h2>Everett Community College & GRAPH 130.</h2>
 <h3>How many quarters have you attended EvCC?.</h3>
 <p>I started in 2021 so I've attended 6 quarters so far.</p>
