--- a/pages/fluid.html
+++ b/pages/fluid.html
@@ -45,13 +45,16 @@
 </header>
 <main>
     <article>
-        <section class="hero">
+        <section class="hero pure-g">
+            <div class="pure-u-1-2">
               <h1>Fluid Dimensions Experiment</h1>
                 <p>
                     So far we have been building our web pages with fixed dimensions. Our sizes have been determined by pixels. That was the old way of building websites when screen sizes were more uniform. Modern websites are viewed on a variety of screen sizes and we want our content to begin to fit to the window it is being viewed in. We will begin to utilize percentages, em, and rem to make our site fluid. To be a proper fluid web site the content should be adjusting and flowing according to the viewport between media breaks. 
                     "Be like water" -Bruce Lee
                 </p>
-        </section>
+            </div>
+            <img src="../images/bruce-lee.jpg" width="300px" alt="Bruce Lee" class="pure-u-1-2"/>
+            </section>
 </article>
 
 <article class="pure-g">
