--- a/pages/optimizing-images.html
+++ b/pages/optimizing-images.html
@@ -52,11 +52,11 @@
     <!-- beginLibraryItem "/library/navigation.lbi" -->
 <nav>
     <ul>
-      <li><a href="/pages/fluid.html">Fluid</a></li>
-      <li><a href="/pages/theatre2.html">Theater</a></li>
-      <li><a href="/pages/history.html">History</a></li>
-      <li><a href="/pages/stew-recipe.html">Stew Recipe</a></li>
-      <li><a href="/pages/cascademountain.html">Cascades</a></li>
+      <li><a href="fluid.html">Fluid</a></li>
+      <li><a href="theatre2.html">Theater</a></li>
+      <li><a href="history.html">History</a></li>
+      <li><a href="stew-recipe.html">Stew Recipe</a></li>
+      <li><a href="cascademountain.html">Cascades</a></li>
     </ul>
   </nav>
   <!-- endLibraryItem -->
