--- a/pages/fluid.html
+++ b/pages/fluid.html
@@ -53,7 +53,7 @@
                     "Be like water" -Bruce Lee
                 </p>
             </div>
-            <img src="../images/bruce-lee.jpg" width="300px" alt="Bruce Lee" class="pure-u-1-2"/>
+            <img src="../images/bruce-lee.jpg" alt="Bruce Lee" class="pure-u-1-2"/>
             </section>
 </article>
 
