--- a/pages/cascade.html
+++ b/pages/cascade.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="../styles/small.css" rel="stylesheet">
+    <link href="../styles/medium.css" rel="stylesheet" media="screen and (min-width:641px)">
+    <link href="../styles/large.css" rel="stylesheet" media="screen and (min-width:1024px)">
     <title>Cascade Mountains</title>
-    <link rel="stylesheet" href="../styles/cascade2styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cabin+Sketch&Roboto+Slab&display=swap" rel="stylesheet">
 </head>
 <body>
         <article class="container">
@@ -122,7 +124,7 @@
 
 
     <footer>
-        <p>&copy;Content taken from wikipedia (http://en.wikipedia.org/wiki/Cascade_Range)
+        <p>&copy;Content taken from wikipedia <a href="//en.wikipedia.org/wiki/Cascade_Range" target="_blank">wikipedia</a>
             Amber 2023. Everett Community College Graph 130 web coding project. </p>
     </footer>
 
