Islands and Mobile

--- a/pages/lopez.html
+++ b/pages/lopez.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Orcas Island</title>
     <link href="../styles/islands.css" rel="stylesheet" type="text/css">
+    <link href="../styles/lopez.css" rel="stylesheet" type="text/css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,400;0,700;1,100&display=swap" rel="stylesheet">
@@ -21,8 +22,8 @@
                 </form> 
             </search>       
             
-        <div class="hero-orcas">
-            <h1>orcas island</h1>
+        <div class="hero-lopez">
+            <h1>lopez island</h1>
         </div>
     </header>
     <nav>
@@ -33,7 +34,7 @@
         </ul>
     </nav>
     <main>
-        <section class="item1">large image</section>
+        <section class="item1"></section>
         <section class="item2">
             <div class="island-text">
                 <h2>Lodging</h2>
@@ -41,7 +42,7 @@
             </div>
             <div class="pic2"></div>
         </section>
-        <section class="item3">medium image</section>
+        <section class="item3"></section>
         <section class="item4">
             <div class="island-text">
                 <h2>Dining</h2>
@@ -49,7 +50,7 @@
             </div>
             <div class="pic4"></div>
         </section>
-        <section class="item5">medium image</section>
+        <section class="item5"></section>
         <section class="item6">
             <div class="island-text">
                 <h2>Activities</h2>
@@ -57,7 +58,7 @@
             </div>
             <div class="pic6"></div>
         </section>
-        <section class="item7">large image</section>
+        <section class="item7"></section>
     </main>
     <footer>
         <p class="item8">san juan expedition</p>
