--- a/pages/fluid.html
+++ b/pages/fluid.html
@@ -6,6 +6,7 @@
     <title>Fluid Dimensions</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/pure-min.css" integrity="sha384-X38yfunGUhNzHpBaEBsWLO+A0HDYOQi8ufWDkZ0k9e0eXz/tH3II7uKZ9msv++Ls" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/fluid.css">
+    <link href="../styles/mobile.css" rel="stylesheet" type="text/css">
     
     
 </head>
