--- a/pages/theatre2.html
+++ b/pages/theatre2.html
@@ -8,7 +8,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">
     <link href="../styles/styles.css" rel="stylesheet" type="text/css">
+    <link href="../styles/theater-mobile.css" rel="stylesheet" type="text/css">
 </head>
+
 <body>
     <header>
         <img src="../images/New-Logo-with-Programs_black.jpg" width="100px" height="auto"/>
