--- a/pages/lopez.html
+++ b/pages/lopez.html
@@ -6,6 +6,7 @@
     <title>Orcas Island</title>
     <link href="../styles/islands.css" rel="stylesheet" type="text/css">
     <link href="../styles/lopez.css" rel="stylesheet" type="text/css">
+    <link href="../styles/islands-mobile.css" rel="stylesheet" type="text/css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,400;0,700;1,100&display=swap" rel="stylesheet">
