--- a/pages/stew-recipe.html
+++ b/pages/stew-recipe.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <link href="../styles/stew.css" rel="stylesheet" type="text/css">
+    <link href="../styles/stew-mobile.css" rel="stylesheet" type="text/css">
     <title>Stew Recipe</title>
     <style>
         i {
