--- a/pages/cascademountain.html
+++ b/pages/cascademountain.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="stylesheet" href="../styles/mobile-final.css" type="text/css">
 </head>
 
 <body>
@@ -18,18 +19,27 @@
         <h1>Cascade Mountain</h1>
     </header>
 
-    <nav>
-        <ul>
-            <li><a href="#main-content">Main Content</a></li>
-            <li><a href="#geography">Geography</a></li>
-            <li><a href="#history">History</a></li>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="theatre2.html">Theater Bill</a></li>
-            <li><a href="history.html">Internet History</a></li>
-            <li><a href="stewrecipe.html">Stew Recipe</a></li>
-        </ul>
+    <nav class="navbar">
+        <div class="page-title">Cascade Mountain</div>
+        <a href="a" class="toggle-button">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </a>
+        <div class="navbar-links">
+            <ul>
+                <li> <a href="../index.html">Home</a></li>
+                <li> <a href="history.html">History</a></li>
+                <li> <a href="orcas.html">Orcas</a></li>
+                <li> <a href="fluid.html">Fluid</a></li>
+                <li> <a href="theatre2.html">Theater</a></li>
+                <li> <a href="lopez.html">Lopez</a></li>
+                <li> <a href="stew-recipe.html">Stew Recipe</a></li>
+                <li> <a href="final">Final</a></li>
+                <li> <a href="cascademountain.html">Cascade</a></li>
+            </ul>
+        </div>
     </nav>
-
     <article>
 
         <section data-aos="fade-up"
