--- a/pages/lopez.html
+++ b/pages/lopez.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,400;0,700;1,100&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="../styles/mobile-final.css" type="text/css">
 </head>
 <body>
     <header>
@@ -27,12 +28,26 @@
             <h1>lopez island</h1>
         </div>
     </header>
-    <nav>
-        <ul>
-            <a href="orcas.html"><li>ORCAS ISLAND</li></a>
-            <a href="sanjuan.html"><li>SAN JUAN ISLAND</li></a>
-            <a href="lopez.html"><li>LOPEZ ISLAND</li></a>
-        </ul>
+    <nav class="navbar">
+        <div class="page-title">Lopez Island</div>
+        <a href="a" class="toggle-button">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </a>
+        <div class="navbar-links">
+            <ul>
+                <li> <a href="../index.html">Home</a></li>
+                <li> <a href="history.html">History</a></li>
+                <li> <a href="orcas.html">Orcas</a></li>
+                <li> <a href="fluid.html">Fluid</a></li>
+                <li> <a href="theatre2.html">Theater</a></li>
+                <li> <a href="lopez.html">Lopez</a></li>
+                <li> <a href="stew-recipe.html">Stew Recipe</a></li>
+                <li> <a href="final">Final</a></li>
+                <li> <a href="cascademountain.html">Cascade</a></li>
+            </ul>
+        </div>
     </nav>
     <main>
         <section class="item1"></section>
