--- a/pages/stew-recipe.html
+++ b/pages/stew-recipe.html
@@ -3,6 +3,7 @@
 <head>
     <link href="../styles/stew.css" rel="stylesheet" type="text/css">
     <link href="../styles/stew-mobile.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="../styles/mobile-final.css" type="text/css">
     <title>Stew Recipe</title>
     <style>
         i {
@@ -13,6 +14,29 @@
         }
     </style>
 </head>
+
+<nav class="navbar">
+    <div class="page-title">Page name</div>
+    <a href="a" class="toggle-button">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+    </a>
+    <div class="navbar-links">
+        <ul>
+            <li> <a href="../index.html">Home</a></li>
+            <li> <a href="history.html">History</a></li>
+            <li> <a href="orcas.html">Orcas</a></li>
+            <li> <a href="fluid.html">Fluid</a></li>
+            <li> <a href="theatre2.html">Theater</a></li>
+            <li> <a href="lopez.html">Lopez</a></li>
+            <li> <a href="stew-recipe.html">Stew Recipe</a></li>
+            <li> <a href="final">Final</a></li>
+            <li> <a href="cascademountain.html">Cascade</a></li>
+        </ul>
+    </div>
+</nav>
+
 <body>
     <div class="stew-content">
         <h1 style="color:orange;font-size:26px;">Make the Best Beef Stew from Scratch</h1>
