--- a/pages/fluid.html
+++ b/pages/fluid.html
@@ -8,10 +8,33 @@
     <link rel="stylesheet" href="../styles/fluid.css">
     <link rel="stylesheet" href="../styles/fluid-mobile.css">
     <link href="../styles/mobile.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="../styles/mobile-final.css" type="text/css">
     
     
 </head>
 <body>
+
+    <nav class="navbar">
+        <div class="page-title">History Of Internet</div>
+        <a href="a" class="toggle-button">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </a>
+        <div class="navbar-links">
+            <ul>
+                <li> <a href="../index.html">Home</a></li>
+                <li> <a href="history.html">History</a></li>
+                <li> <a href="orcas.html">Orcas</a></li>
+                <li> <a href="fluid.html">Fluid</a></li>
+                <li> <a href="theatre2.html">Theater</a></li>
+                <li> <a href="lopez.html">Lopez</a></li>
+                <li> <a href="stew-recipe.html">Stew Recipe</a></li>
+                <li> <a href="final">Final</a></li>
+                <li> <a href="cascademountain.html">Cascade</a></li>
+            </ul>
+        </div>
+    </nav>
 <header>
     <nav class="pure-menu pure-menu-horizontal">
         <ul class="pure-menu-list">
@@ -125,5 +148,7 @@
 
 </article>
 </main>
+<script src="../scripts/mobile-nav.js"></script>
+
 </body>
 </html>
