--- a/pages/history.html
+++ b/pages/history.html
@@ -10,15 +10,32 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="stylesheet" href="../styles/mobile-final.css" type="text/css">
 </head>
 
 <body>
     <header>
-        <a href="../index.html">Home</a>
-        <a href="theatre2.html">Theater Bill</a>
-        <a href="stew-recipe.html">Stew Recipe</a>
-        <a href="cascademountain.html">Cascades</a>
-        <a href="#lily">Jump to Bottom</a>
+        <nav class="navbar">
+            <div class="page-title">History Of Internet</div>
+            <a href="a" class="toggle-button">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </a>
+            <div class="navbar-links">
+                <ul>
+                    <li> <a href="../index.html">Home</a></li>
+                    <li> <a href="history.html">History</a></li>
+                    <li> <a href="orcas.html">Orcas</a></li>
+                    <li> <a href="fluid.html">Fluid</a></li>
+                    <li> <a href="theatre2.html">Theater</a></li>
+                    <li> <a href="lopez.html">Lopez</a></li>
+                    <li> <a href="stew-recipe.html">Stew Recipe</a></li>
+                    <li> <a href="final">Final</a></li>
+                    <li> <a href="cascademountain.html">Cascade</a></li>
+                </ul>
+            </div>
+        </nav>
 
     </header>
 
