--- a/pages/theatre2.html
+++ b/pages/theatre2.html
@@ -11,6 +11,28 @@
     <link href="../styles/theater-mobile.css" rel="stylesheet" type="text/css">
 </head>
 
+<nav class="navbar">
+    <div class="page-title">Page name</div>
+    <a href="a" class="toggle-button">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+    </a>
+    <div class="navbar-links">
+        <ul>
+            <li> <a href="../index.html">Home</a></li>
+            <li> <a href="history.html">History</a></li>
+            <li> <a href="orcas.html">Orcas</a></li>
+            <li> <a href="fluid.html">Fluid</a></li>
+            <li> <a href="theatre2.html">Theater</a></li>
+            <li> <a href="lopez.html">Lopez</a></li>
+            <li> <a href="stew-recipe.html">Stew Recipe</a></li>
+            <li> <a href="final">Final</a></li>
+            <li> <a href="cascademountain.html">Cascade</a></li>
+        </ul>
+    </div>
+</nav>
+
 <body>
     <header>
         <img src="../images/New-Logo-with-Programs_black.jpg" width="100px" height="auto"/>
