--- a/pages/mobile-nav.html
+++ b/pages/mobile-nav.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <nav class="navbar">
-        <div class="page-title">Page name</div>
-        <a href="a" class="toggle-button">
+        <div class="page-title"><p>Page name</p></div>
+        <a href="#" class="toggle-button">
             <span class="bar"></span>
             <span class="bar"></span>
             <span class="bar"></span>
