--- a/styles/mobile-final.html
+++ b/styles/mobile-final.html
@@ -1,10 +1,8 @@
-* { 
-    box-sizing: border-box;
-}
+
 
 body {
-    margin: 0;
-    padding: 0;
+    margin: 0%;
+    padding: 0%;
 }
 
 .navbar {
@@ -12,7 +10,7 @@ body {
     position: relative;
     justify-content: space-between;
     align-items: center;
-    background-color: #333;
+    background-color:black;
     color: white;
 
 }
@@ -32,11 +30,11 @@ body {
     padding: 0%;
 }
 
-.navbar-links li {
+.navbar-links li a {
     list-style: none;
 }
 
-.navbar-links li a {
+.navbar-links li {
     display: inline-block;
     text-decoration: none;
     color: white;
@@ -44,28 +42,28 @@ body {
 }
 
 .navbar-links li:hover {
-    background-color: #555;
+    background-color: black;
 }
 
 .toggle-button {
     position: absolute;
     top: 10px;
     right: 16px;
-    display: none;
+    display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: baseline;
     width: 30px;
     height: 21px;
 }
 
 .toggle-button .bar {
-    height: 3px;
+    height: 30px;
     width: 100%;
-    background-color: white;
+    background-color: aliceblue;
     border-radius: 10px;
 }
 
-@media screen and (max-width: 800px) {
+@media screen {
     .navbar {
         flex-direction: column;
         align-items: flex-start;
@@ -80,30 +78,26 @@ body {
         width: 100%;
     }
 
+    .navbar-links ul {
+        display: flex;
+        margin: 0;
+        padding: 0;
+    }
+
     .navbar-links li {
         list-style: none;
     }
 
-    .navbar-links ul {
-        width: 100%;
-        flex-direction: column;
-    }
-
-    .navbar-links ul li {
-        text-align: center;
-    }
-
-    .navbar-links ul li a {
-        padding: 8px 16px;
+    .navbar-links li a {
+        display: inline;
+        text-decoration: none;
+        color: white;
+        padding: 16px;
 
     }
 
     .navbar-links.active{
         display: flex;
-    }
-
-    nav a {
-        border: 0px;
     }
 }
 
