--- a/pages/history.html
+++ b/pages/history.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="stylesheet" href="../styles/history-mobile.css" type="text/css">
     <link rel="stylesheet" href="../styles/mobile-final.css" type="text/css">
 </head>
 
@@ -17,7 +18,7 @@
     <header>
         <nav class="navbar">
             <div class="page-title">History Of Internet</div>
-            <a href="a" class="toggle-button">
+            <a href="#" class="toggle-button">
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
