--- a/pages/optimizing-images.html
+++ b/pages/optimizing-images.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Optimizing Images</title>
     <link href="../styles/optimizingstyle.css" rel="stylesheet">
+    <link href="../styles/optimizing-mobile.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Space+Mono&display=swap" rel="stylesheet">
 
 
     <style>
         .loki {
             background-color: gray;
-            width: 700px;
+            width: 276px;
             padding: 7px;
             margin: 5px;
             float: left;
