--- a/pages/stew-recipe.html
+++ b/pages/stew-recipe.html
@@ -16,7 +16,7 @@
 </head>
 
 <nav class="navbar">
-    <div class="page-title">Page name</div>
+    <div class="page-title"><p>Stew Recipe</p></div>
     <a href="a" class="toggle-button">
         <span class="bar"></span>
         <span class="bar"></span>
@@ -57,7 +57,7 @@
         <p>For seasonings, I like Worcestershire sauce, thyme, and a good red wine. I've also used a dark beer in place of the wine and been very happy with the results. You can certainly play with your own favorite seasonings, but I would recommend keeping them fairly simple. If you've seared your meat well and cooked it long enough, the stew can really stand on its own without much else.</p>
 
         <p>I know this is one version of beef stew, though I'll confess that I think it's a particularly good one. How do you like to make your stew? What do you do differently?</p>
-    <img src="../images/hero2.jpg" alt="bowl of stew">
+    <img src="../images/hero2.jpg" alt="bowl of stew" class="bigbowl">
         <h2>How to Make a Very Good Beef Stew</h2>
 
         <p><i>Serves 6-8</i></p>
