--- a/pages/theatre2.html
+++ b/pages/theatre2.html
@@ -9,11 +9,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">
     <link href="../styles/styles.css" rel="stylesheet" type="text/css">
     <link href="../styles/theater-mobile.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="../styles/mobile-final.css" type="text/css">
+
 </head>
 
 <nav class="navbar">
-    <div class="page-title">Page name</div>
-    <a href="a" class="toggle-button">
+    <div class="page-title">Theater Bill</div>
+    <a href="#" class="toggle-button">
         <span class="bar"></span>
         <span class="bar"></span>
         <span class="bar"></span>
