--- a/pages/history.html
+++ b/pages/history.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <nav class="navbar">
-            <div class="page-title">History Of Internet</div>
+            <div class="page-title"><p>History Of Internet</p></div>
             <a href="#" class="toggle-button">
                 <span class="bar"></span>
                 <span class="bar"></span>
