--- a/pages/lopez.html
+++ b/pages/lopez.html
@@ -12,6 +12,30 @@
 <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,400;0,700;1,100&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="../styles/mobile-final.css" type="text/css">
 </head>
+
+<nav class="navbar">
+    <div class="page-title"><p>History Of Internet</p></div>
+    <a href="#" class="toggle-button">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+    </a>
+    <div class="navbar-links">
+        <ul>
+            <li> <a href="../index.html">Home</a></li>
+            <li> <a href="history.html">History</a></li>
+            <li> <a href="orcas.html">Orcas</a></li>
+            <li> <a href="fluid.html">Fluid</a></li>
+            <li> <a href="theatre2.html">Theater</a></li>
+            <li> <a href="lopez.html">Lopez</a></li>
+            <li> <a href="stew-recipe.html">Stew Recipe</a></li>
+            <li> <a href="final">Final</a></li>
+            <li> <a href="cascademountain.html">Cascade</a></li>
+        </ul>
+    </div>
+</nav>
+
+
 <body>
     <header>
             <a href="../index.html" target="_blank">go to home</a>
