--- a/index.html
+++ b/index.html
@@ -1,9 +1,41 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="./styles/mobile-final.css" type="text/css">
+	<title>Home Page</title>
+</head>
+
+
+<nav class="navbar">
+	<div class="page-title"><p>History Of Internet</p></div>
+	<a href="#" class="toggle-button">
+		<span class="bar"></span>
+		<span class="bar"></span>
+		<span class="bar"></span>
+	</a>
+	<div class="navbar-links">
+		<ul>
+			<li> <a href="index.html">Home</a></li>
+			<li> <a href="./pages/history.html">History</a></li>
+			<li> <a href="./pages/orcas.html">Orcas</a></li>
+			<li> <a href="./pages/fluid.html">Fluid</a></li>
+			<li> <a href="./pages/theatre2.html">Theater</a></li>
+			<li> <a href="./pages/lopez.html">Lopez</a></li>
+			<li> <a href="./pages/stew-recipe.html">Stew Recipe</a></li>
+			<li> <a href="final">Final</a></li>
+			<li> <a href="./pages/cascademountain.html">Cascade</a></li>
+		</ul>
+	</div>
+</nav>
+
 	<head>
 		<meta charset="UTF-8">
 		<title>Graph 130 - Eve</title>
 	</head>
+
+	
 	<body>
 <h1>Eve Williams</h1>
 <h2>Everett Community College & GRAPH 130.</h2>
