--- a/pages/cascademountain.html
+++ b/pages/cascademountain.html
@@ -20,8 +20,8 @@
     </header>
 
     <nav class="navbar">
-        <div class="page-title">Cascade Mountain</div>
-        <a href="a" class="toggle-button">
+        <div class="page-title"><p>Cascade Mountain</p></div>
+        <a href="#" class="toggle-button">
             <span class="bar"></span>
             <span class="bar"></span>
             <span class="bar"></span>
