--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 
 <nav class="navbar">
-	<div class="page-title"><p>History Of Internet</p></div>
+	<div class="page-title"><p>Home page</p></div>
 	<a href="#" class="toggle-button">
 		<span class="bar"></span>
 		<span class="bar"></span>
