--- a/pages/fluid.html
+++ b/pages/fluid.html
@@ -15,7 +15,7 @@
 <body>
 
     <nav class="navbar">
-        <div class="page-title">History Of Internet</div>
+        <div class="page-title"><p>Fluid</p></div>
         <a href="a" class="toggle-button">
             <span class="bar"></span>
             <span class="bar"></span>
