--- a/pages/lopez.html
+++ b/pages/lopez.html
@@ -14,7 +14,7 @@
 </head>
 
 <nav class="navbar">
-    <div class="page-title"><p>History Of Internet</p></div>
+    <div class="page-title"><p>Lopez</p></div>
     <a href="#" class="toggle-button">
         <span class="bar"></span>
         <span class="bar"></span>
