--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 			<li> <a href="./pages/theatre2.html">Theater</a></li>
 			<li> <a href="./pages/lopez.html">Lopez</a></li>
 			<li> <a href="./pages/stew-recipe.html">Stew Recipe</a></li>
-			<li> <a href="final">Final</a></li>
-			<li> <a href="./pages/cascademountain.html">Cascade</a></li>
+			<li> <a href="./pages/final2.html">Final</a></li>
+			<li> <a href="./pages/cascade.html">Cascade</a></li>
 		</ul>
 	</div>
 </nav>
