--- a/pages/stew-recipe.html
+++ b/pages/stew-recipe.html
@@ -31,8 +31,8 @@
             <li> <a href="theatre2.html">Theater</a></li>
             <li> <a href="lopez.html">Lopez</a></li>
             <li> <a href="stew-recipe.html">Stew Recipe</a></li>
-            <li> <a href="final">Final</a></li>
-            <li> <a href="cascademountain.html">Cascade</a></li>
+            <li> <a href="final2.html">Final</a></li>
+            <li> <a href="cascade.html">Cascade</a></li>
         </ul>
     </div>
 </nav>
